--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,7 @@
 .header {
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(215, 211, 226, 0.6), rgba(77, 93, 234, 0.6), rgba(153, 153, 234, 0.7)), url(/DDU_Image/Laxmi-Vilas-Palace-Banner1.jpg);
+    background-image: linear-gradient(rgba(215, 211, 226, 0.6), rgba(77, 93, 234, 0.6), rgba(153, 153, 234, 0.7)), url(../DDU_Image/Laxmi-Vilas-Palace-Banner1.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
@@ -304,7 +304,7 @@ h3 {
 .cta {
     margin: 10px auto;
     width: 80%;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/DDU_Image/banner2.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../DDU_Image/banner2.jpg);
     background-position: center;
     background-size: cover;
     border-radius: 10px;
@@ -364,7 +364,7 @@ h3 {
 .sub-header {
     height: 50vh;
     width: 100%;
-    background-image: linear-gradient(rgba(215, 211, 226, 0.6), rgba(77, 93, 234, 0.6), rgba(153, 153, 234, 0.7)), url(/DDU_Image/background.jpg);
+    background-image: linear-gradient(rgba(215, 211, 226, 0.6), rgba(77, 93, 234, 0.6), rgba(153, 153, 234, 0.7)), url(../DDU_Image/background.jpg);
     background-position: center;
     background-size: cover;
     text-align: center;
